adding get endpoint police/auctions/active
